2019-03-02  Darin Adler  <darin@apple.com>

        Retire legacy dtoa function and DecimalNumber class
        https://bugs.webkit.org/show_bug.cgi?id=195253

        Reviewed by Daniel Bates.

        * web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-iteration-composite-operation-expected.txt:
        Rebaseline still-failing part of this test that dumps super-small numbers that are formatted
        differently by the new code (exponential style).

2019-03-01  Rob Buis  <rbuis@igalia.com>

        Adjust XMLHttpRequest Content-Type handling
        https://bugs.webkit.org/show_bug.cgi?id=184645

        Reviewed by Youenn Fablet.

        Sync test and update test expectation (all PASSes).

        * web-platform-tests/xhr/send-content-type-charset-expected.txt:
        * web-platform-tests/xhr/send-content-type-charset.htm:

2019-03-01  Antoine Quint  <graouts@apple.com>

        Enable WPT Pointer Events tests
        https://bugs.webkit.org/show_bug.cgi?id=195204
        <rdar://problem/48502751>

        Reviewed by Dean Jackson.

        The touch-action property has been enabled as part of the work on webkit.org/b/195008 but the WPT tests
        had not been enabled yet, so we're now adding the progressions made.

        * web-platform-tests/pointerevents/extension/pointerevent_touch-action-verification-expected.txt:
        * web-platform-tests/pointerevents/pointerevent_touch-action-verification-expected.txt:

2019-02-28  Charles Vazac  <cvazac@akamai.com>

        Fix Resource Timing buffer edge cases for WPT
        https://bugs.webkit.org/show_bug.cgi?id=193213

        Reviewed by Youenn Fablet.

        * web-platform-tests/resource-timing/buffer-full-add-after-full-event.html:
        * web-platform-tests/resource-timing/buffer-full-add-entries-during-callback-that-drop-expected.txt:
        * web-platform-tests/resource-timing/buffer-full-add-then-clear-expected.txt: